--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ buildscript {
 
 apply plugin: "jdocbook"
 
+defaultTasks 'buildDocs'
+
 // the stylesheets used in the format are came from hibernate-jdocbook-style
 // but they're optional, you can use others or the default come from docbook-xsl
 dependencies {
